--- a/style.css
+++ b/style.css
@@ -1,35 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Montserrat:wght@100&family=Poppins:wght@300&display=swap');
+
+
 header {
+	height: 100px;
 	padding: 0px;
-	background-color: #121212;
+	background-color: black;
    justify-content: space-between;
 	}
 	
-	nav ul {
-	list-style-type: none;
-	margin: 0 auto;
-	text-align: right;
-	font-size: 15px;
+	.navbar-container {
+		width: 100%;
+		height:80px;
+		background-color: black;
+	}
 	
-	position: absolute;
-	top: 80px;
-	left: 800px;
-}
-
-nav ul li {
-	display: inline;
-	margin-right: 40px;
-	margin: 0px;
-}
-
-nav ul li a {
-	text-decoration: none;
-	font-family: Arial;
-	color: #FFFFFF;
-	margin: 10px;
-}
-
-nav ul li a:hover {color: #E0A96D;}
+	nav {
+		position: relative;
+	}
+	
+	.logo {
+		width: 50px;
+		margin-top: 15px;
+	}
+	
+	.navbar-items {
+		position: absolute;
+		right: 0;
+		height: 80px;
+		line-height: 80px;
+		margin: 0;
+		margin-right: 30px;
+		display: inline-block;
+	}
+	.navbar-items li {
+		display: inline-block;
+		text-transform: uppercase;
+		margin-left: 25px;
+	}
+	
+	.navbar-items a {
+		color: #fff;
+		text-decoration: none;
+		transition: 0.5s;
+		font-family: poppins;
+	}
+nav ul li a:hover {color: rgb(154, 153, 201);}
 	
 #logoheader {
 	border-radius: 50%;
@@ -48,8 +63,68 @@ nav ul li a:hover {color: #E0A96D;}
     height: auto;
 	}
 	
-h1, p {margin: 0 auto; padding: 15px; font-family: Poppins;; color: #ffff}
-p, #p1, #p2, #p3 { font-family: Poppins; text-align: justify; font-size: 25px;}
+
+	.main-banner {
+		background-image: url("img/0ce748e674e8c397befe811696e315b5.jpg");
+		background-size: cover;
+		background-position: center;
+		padding: 15rem 0;
+	}
+	
+	.tecnologias {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 20px;
+	}
+	
+	.whitebox {
+		margin: 50px;
+		display: flex;
+		border-radius: 20px;
+		background-color: #F6F1E9;
+		height: 100px;
+	}
+
+	.icons {
+		display: flex;
+		align-items: center;
+		padding-bottom: 50px;
+	}
+	
+	.icons img {
+		margin-top: 50px;
+		width: 80px;
+		height: 80px;
+		padding: 20px;
+	}
+
+	.icons .cssicon {
+		margin-top: 60px;
+		width:65px;
+		height: 65px
+	}
+
+	.icons .flaskicon {
+		margin-top: 60px;
+		width:75px;
+		height: 65px
+	}
+
+h1 {
+	margin: 0 auto;
+	font-family: Poppins;
+	color: #ffff;
+	}
+
+	p {
+		font-size: 26px;
+		font-weight: bold;
+		letter-spacing: normal;
+		font-family: Poppins;
+		color: #ffff;
+		width: 900px;
+	}
 
 #imagens {
 	position: flex;
@@ -69,18 +144,19 @@ p, #p1, #p2, #p3 { font-family: Poppins; text-align: justify; font-size: 25px;}
 
 .foto:hover {transform: scale(1.2);}
 
-	
-body {
-	padding: 0px 90px 0px 90px;
-	background-color: #F6F1E9;
-}
 
-main {background-color: #B46060;}
+main {
+	background-color: rgb(154, 153, 201);
+	height: 100%;
+}
 
 footer {
 	text-align: center;
+	margin-top: 10px;
 	padding: 0px;
 }
+
+.socials:hover {transform: scale(1.2);}
 
 .socials {
 	width: 50px;
@@ -88,9 +164,34 @@ footer {
 	margin: 10px;
 }
 
+.trabalhos {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 50px;
+}
 
-#chanel {
-	border-radius: 50%;
+.channeldesc {
+	display: flex;
+}
+
+#pchanel {width: 500px;}
+
+.shellydesc {
+	display: flex;
+}
+
+#pshelly {width: 500px;}
+
+.logobarcodesc {
+	display: flex;
+}
+
+#pbarco {width: 500px;}
+
+
+#chanel, #shelly, #logobarco, #hdclogo {
+	border-radius: 40px;
 	width: 200px;
 	height: 200px;
 	padding: 15px;
@@ -101,33 +202,9 @@ footer {
     height: auto;
 }
 
-#shelly {
-	border-radius: 50%;
-	width: 200px;
-	height: 200px;
-	padding: 15px;
-	display: inline;
-	transition: transform 0.3s ease;
-	
-	max-width: 100%;
-    height: auto;
-}
 
-#logobarco {
-	border-radius: 50%;
-	width: 200px;
-	height: 200px;
-	padding: 15px;
-	display: inline;
-	transition: transform 0.3s ease;
-	
-	max-width: 100%;
-    height: auto;
-}
+#chanel:hover, #shelly:hover, #logobarco:hover, #hdclogo:hover {transform: scale(1.2);}
 
-#chanel:hover {transform: scale(1.2);}
-#shelly:hover {transform: scale(1.2);}
-#logobarco:hover {transform: scale(1.2);}
 
 .feedbacktext {
 	display: flex;
@@ -176,48 +253,160 @@ form label {
 	padding: 5px;
 }
 
-@media only screen and (max-width: 1300px) {
-  [class*="col-"] {
-    width: 50%;}
-	 
-	 nav ul {
-	list-style-type: none;
-	margin: 5px; 
-	text-align: left;
-	font-size: 15px;
+@media (max-width: 1100px) {
+    .plans-container {
+        width: 95%;
+    }
+
+    .plan {
+        margin: 0 5px;
+    }
+}
+
+/* tablet */
+@media (max-width: 900px) {
+    html, body {
+        overflow-x: hidden;
+    }
+
+    .main-banner p {
+        padding: 0 6rem;
+    }
+
+	p {
+		font-size: 24px;
+		text-align: center;
+		letter-spacing: normal;
+		font-family: Poppins;
+		color: #ffff;
+		width: 100%;
+	}
+
+	#pbarco, #pchanel, #pshelly {
+		width: 90%;
+		font-size: 24px;
+		padding-left: 40px;
+		text-align: left;
+	}
+}
+
+/* mobile */
+@media (max-width: 576px) {
+    html, body {
+        overflow-x: hidden;
+    }
+
+	header {
+		height: 200px;
+	}
+
+	.navbar-items {
+		display: flex;
+	}
+
+    .navbar-items li {
+        font-size: 15px;
+    }
+
+	.main-banner {
+		background-image: url("img/0ce748e674e8c397befe811696e315b5.jpg");
+		background-size: cover;
+		background-position: 48%;
+		padding: 15rem 0;
+	}
 	
-	position: flex;
-	top: 110px;
-	left: -20px;
-}
-
-nav ul li {
-	display: inline;
-	margin-right: 40px;
-	margin: 0px;
-}
-
-nav ul li a {
-	text-decoration: none;
-	font-family: Arial;
-	color: #FFFFFF;
-	margin: 5px;
-}
-
-body {padding:0px;}
-	 
-header {padding: 20px;}
-
-.foto {
-	width: 150px;
-	margin: 5px;
-	height: 150px;
-	transition: transform 0.3s ease;
+	.tecnologias {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 30px;
+	}
 	
-	max-width: 100%;
-    height: auto;
+	.whitebox {
+		margin: 50px;
+		display: flex;
+		border-radius: 20px;
+		background-color: #F6F1E9;
+		height: 100px;
+		width: 400px;
+	}
+
+	.icons {
+		display: flex;
+		align-items: center;
+		padding-bottom: 50px;
+	}
+	
+	.icons img {
+		margin-top: 50px;
+		width: 50px;
+		height: 50px;
+		padding: 15px;
+	}
+
+	.icons .cssicon {
+		margin-top: 50px;
+		width:40px;
+		height: 40px
+	}
+
+	.icons .flaskicon {
+		margin-top: 50px;
+		width:45px;
+		height: 45px
+	}
+
+	
+		p {
+			font-size: 18px;
+			text-align: center;
+			letter-spacing: normal;
+			font-family: Poppins;
+			color: #ffff;
+			width: 100%;
+		}
+
+		.trabalhos {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding-top: 20px;
+		}
+		
+		.channeldesc {
+			display: flex;
+		}
+		
+		
+		.shellydesc {
+			display: flex;
+		}
+		
+		
+		.logobarcodesc {
+			display: flex;
+		}
+		
+		#pbarco, #pchanel, #pshelly {
+			width: 90%;
+			font-size: 15px;
+			padding-left: 20px;
+			text-align: left;
+		}
+		
+		
+		#chanel, #shelly, #logobarco, #hdclogo {
+			border-radius: 40px;
+			width: 100px;
+			height: 100px;
+			padding: 10px;
+			display: inline;
+			transition: transform 0.3s ease;
+			
+			max-width: 100%;
+			height: auto;
+		}
+
+		h1 {font-size: 18px;}
+
 }
-	 
-  }
-  
-  p, #p1, #p2, #p3 {text-align: justify;}
