--- a/style.css
+++ b/style.css
@@ -225,17 +225,21 @@ form {
 	display: flex;
 	flex-direction: column;
 	color: #ffff;
-	margin-bottom: 30px;
+	margin-bottom:100px;
 	font-family: Arial;
 }
 
-form input, form textarea, button {
+form input, form textarea {
 	outline: unset;
 	padding: 20px;
-	min-width: 300px;
+	width: 200px;
 	border: 1px solid;
 	border-radius: 20px;
 	
+}
+
+form input [type="submit"] {
+	width: 500px;
 }
 
 form input:focus, form textarea:focus {
@@ -359,6 +363,153 @@ form label {
 	
 		p {
 			font-size: 18px;
+			text-align: center;
+			letter-spacing: normal;
+			font-family: Poppins;
+			color: #ffff;
+			width: 100%;
+		}
+
+		.trabalhos {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding-top: 20px;
+		}
+		
+		.channeldesc {
+			display: flex;
+		}
+		
+		
+		.shellydesc {
+			display: flex;
+		}
+		
+		
+		.logobarcodesc {
+			display: flex;
+		}
+		
+		#pbarco, #pchanel, #pshelly {
+			width: 90%;
+			font-size: 15px;
+			padding-left: 20px;
+			text-align: left;
+		}
+		
+		
+		#chanel, #shelly, #logobarco, #hdclogo {
+			border-radius: 40px;
+			width: 100px;
+			height: 100px;
+			padding: 10px;
+			display: inline;
+			transition: transform 0.3s ease;
+			
+			max-width: 100%;
+			height: auto;
+		}
+
+		h1 {font-size: 18px;}
+
+}
+
+/* mobile S */
+@media (max-width: 320px) {
+    html, body {
+        overflow-x: hidden;
+    }
+
+	header {
+		height: 200px;
+	}
+
+	.navbar-items {
+		display: flex;
+		padding: 0;
+		margin: 0;
+	}
+
+    .navbar-items li {
+        font-size: 14px;
+		padding: 10px;
+		margin: 0;
+    }
+
+	.main-banner {
+		background-image: url("img/0ce748e674e8c397befe811696e315b5.jpg");
+		background-size: contain;
+		background-position: 48%;
+		padding: 8rem 0;
+	}
+	
+	.tecnologias {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 100px;
+	}
+	
+	.whitebox {
+		margin: 0;
+		padding: 0;
+		display: flex;
+		border-radius: 20px;
+		background-color: #F6F1E9;
+		height: 300px;
+		width: 250px;
+	}
+
+	.primeiro-quadrante {
+		display: flex;
+		padding-right: 10px;
+	}
+
+	.segundo-quadrante {
+		display: flex;
+		padding-left: 10px;
+	}
+
+	.quinto-quadrante {
+		display: flex;
+		align-self: center;
+		padding-left: 45px;
+
+	}
+
+	.icons {
+		display: flex;
+		flex-direction: column;
+		align-items: end;
+		justify-content: center;
+		padding-bottom: 5px;
+		padding-left: 15px;
+	}
+	
+	.icons .primeiro-quadrante img, .icons .segundo-quadrante img,
+	.icons .quinto-quadrante img {
+		margin-top: 10px;
+		width: 75px;
+		height: 75px;
+		padding: 10px;
+	}
+
+	.icons .primeiro-quadrante .cssicon {
+		margin-top: 20px;
+		width:60px;
+		height:60px;
+	}
+
+	.icons .flaskicon {
+		margin-top: 50px;
+		width:45px;
+		height: 45px
+	}
+
+	
+		p {
+			font-size: 12px;
 			text-align: center;
 			letter-spacing: normal;
 			font-family: Poppins;
