--- a/style.css
+++ b/style.css
@@ -76,12 +76,11 @@ nav ul li a:hover {color: rgb(154, 153, 201);}
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin-top: 20px;
 	}
 	
 	.whitebox {
 		width:30%;
-		height: 90px;
+		height: 110px;
 		background-color: white;
 		border-radius: 50px;
 		margin: 0 auto;
@@ -99,7 +98,9 @@ nav ul li a:hover {color: rgb(154, 153, 201);}
 	}
 
 	.icons img {
-		width: 60px;
+		padding-top: 1rem;
+		width: 40px;
+		height: 40px;
 		font-weight: bold;
 	}
 
